ephy-hosts-store: listen to favicon changes in the wk database

https://bugzilla.gnome.org/show_bug.cgi?id=672525